# tiny-http

./: Cargo.toml  README.md
benches/: bench.rs
examples/: hello-world.rs  php-cgi.rs  readme-example.rs  serve-root.rs  ssl.rs  websockets.rs
src/: client.rs  lib.rs  request.rs  response.rs
src/util/: mod.rs  refined_tcp_stream.rs  sequential.rs
tests/: input-tests.rs  network.rs  simple-test.rs
tests/support/: mod.rs
