[package]
name = "tiny_http"
version = "0.8.0"
authors = ["pierre.krieger1708@gmail.com",
           "Corey Farwell <coreyf@rwell.org>"]
description = "Low level HTTP server library"
documentation = "https://tiny-http.github.io/tiny-http/tiny_http/index.html"
keywords = ["http", "server", "web"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tiny-http/tiny-http"
edition = '2018'

[features]
#default = ["ssl"]
ssl = ["async-native-tls"]

[dependencies]
ascii = "1.0"
chunked_transfer = "1"
#openssl = { version = "0.10", optional = true }
url = "2"
chrono = "0.4"
log = "0.4"
# TODO: find some way to be more agnostic with regard to the runtime
async-net = "1.4.3"
#async-executor = "1.3.0"
futures-lite = "1.8.0"
async-lock = "2.2.0"
async-channel = "1.4.2"
async-fs = "1.3.0"
async-native-tls = { version = "0.3", features = [], optional = true }

[dev-dependencies]
rustc-serialize = "0.3"
sha1 = "0.6.0"
fdlimit = "0.1"
criterion = "0.3"


[[bench]]
name = "bench"
harness = false
